--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Triggui App</title>
+  <title>Triggui App - Portadas Simuladas</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -17,20 +17,20 @@
       flex-direction: column;
       justify-content: space-between;
       height: 100%;
-      padding: 1.5vw;
-      gap: 1.5vw;
+      padding: 16px;
+      gap: 16px;
     }
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 1.5vw;
+      gap: 16px;
       flex-grow: 1;
     }
     .block {
-      flex: 1 1 calc(50% - 0.75vw);
-      max-width: calc(50% - 0.75vw);
-      height: calc(50% - 0.75vw);
+      flex: 1 1 calc(50% - 8px);
+      max-width: calc(50% - 8px);
+      height: calc(50% - 8px);
       border-radius: 16px;
       font-weight: 600;
       font-size: 1.12rem;
@@ -44,22 +44,12 @@
       overflow: hidden;
       color: white;
     }
-    @media (min-width: 768px) {
-      .grid {
-        flex-wrap: nowrap;
-      }
-      .block {
-        flex: 1;
-        height: 75vh;
-        max-width: 100%;
-      }
-    }
     .label {
       z-index: 1;
       position: relative;
       pointer-events: none;
     }
-    .accionables, .book-cover {
+    .accionables, .simulada {
       position: absolute;
       inset: 0;
       display: none;
@@ -77,12 +67,19 @@
       flex-direction: column;
       line-height: 1.4;
     }
-    .book-cover {
-      background-size: cover;
-      background-position: center;
+    .simulada {
+      flex-direction: column;
+      font-size: 1rem;
+      color: #fff;
+      font-weight: bold;
+      text-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+    .simulada span.emoji {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
     .block.show .accionables,
-    .block.show .book-cover {
+    .block.show .simulada {
       display: flex;
     }
     .block.show .label {
@@ -94,7 +91,7 @@
       font-weight: bold;
       border: none;
       border-radius: 32px;
-      padding: 10px 24px;
+      padding: 12px 24px;
       margin: 0 auto;
       font-size: 0.9rem;
       cursor: pointer;
@@ -119,7 +116,7 @@
       </div>
       <div class="block" id="lee" style="background: linear-gradient(135deg, #36D1DC, #5B86E5);">
         <span class="label" id="leeLabel">Lee</span>
-        <div class="book-cover" id="leeCover"></div>
+        <div class="simulada" id="leeCover"></div>
       </div>
       <div class="block" id="question" style="background: linear-gradient(135deg, #FDC830, #F37335);">
         <span class="label">?</span>
@@ -137,44 +134,54 @@
   <script>
     const libros = [
       {
-        portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
-        accionables: ['🧱 Crea sistemas, no metas', '🧠 Identidad guía el hábito', '🔁 Mejora 1% diario']
+        titulo: 'Atomic Habits',
+        emoji: '🧱',
+        accionables: ['Crea sistemas, no metas', 'Identidad guía el hábito', 'Mejora 1% diario']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
-        accionables: ['🧘‍♂️ No todo importa', '💩 Aprende a ignorar con intención', '🧠 Sé brutalmente honesto']
+        titulo: 'Can’t Hurt Me',
+        emoji: '🔥',
+        accionables: ['Transforma el dolor', 'Disfruta lo difícil', 'Hazte imparable']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/61AZS+gaZ8L.jpg',
-        accionables: ['🚪 Cierra puertas digitales', '🕰 Tiempo profundo', '🎯 Prioriza impacto']
+        titulo: 'Mindset',
+        emoji: '🧠',
+        accionables: ['Mentalidad de crecimiento', 'Aprende del fracaso', 'Confía en tu cambio']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71y5d3Es6TL.jpg',
-        accionables: ['🧍 Camina erguido', '🛏 Ordena tu entorno', '🧠 Sé preciso']
+        titulo: 'The Power of Now',
+        emoji: '🌟',
+        accionables: ['El presente es todo', 'Observa sin juicio', 'Haz silencio interior']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71w8Lr+opzL.jpg',
-        accionables: ['⏱ Sistema 1 vs 2', '🧮 Cuestiona tu intuición', '📊 Usa evidencia']
+        titulo: '7 Habits',
+        emoji: '📘',
+        accionables: ['Sé proactivo', 'Fin en mente', 'Gana/Gana']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71bK3b4Y5eL.jpg',
-        accionables: ['🧘 Vive el ahora', '🧠 Observa sin juicio', '🌟 Todo está aquí']
+        titulo: 'Start With Why',
+        emoji: '❓',
+        accionables: ['Empieza por el porqué', 'Inspira con visión', 'Conecta profundo']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81mL+pf5vZL.jpg',
-        accionables: ['💪 La pasión vence al talento', '🏃 Persevera siempre', '🎯 Visión a largo plazo']
+        titulo: 'Deep Work',
+        emoji: '🕳️',
+        accionables: ['Bloques de enfoque', 'Elimina distracciones', 'Produce sin ruido']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81b6x+3uV-L.jpg',
-        accionables: ['🔍 Sé proactivo', '🎯 Ten un fin en mente', '🤝 Gana/Gana']
+        titulo: 'Thinking Fast & Slow',
+        emoji: '⏱️',
+        accionables: ['Sistema 1 y 2', 'No creas tu intuición', 'Decide con datos']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81Zg2z5GZ-L.jpg',
-        accionables: ['❓ Conecta con tu propósito', '🧭 Empieza con “por qué”', '🔄 Inspira con claridad']
+        titulo: '12 Rules for Life',
+        emoji: '🧍‍♂️',
+        accionables: ['Ordena tu mundo', 'Di la verdad', 'Sé fuerte primero']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81c6z6Jz3-L.jpg',
-        accionables: ['🌱 Mentalidad de crecimiento', '💡 Aprende del error', '🚀 Cree en tu mejora']
+        titulo: 'The Subtle Art...',
+        emoji: '🧘‍♂️',
+        accionables: ['No todo importa', 'Ignora con intención', 'Sé brutalmente honesto']
       }
     ];
 
@@ -196,8 +203,11 @@
 
     function sincronizarYMostrarAmbos() {
       seleccionarNuevoLibro();
-      accionablesText.innerHTML = libroActual.accionables.join('<br>');
-      leeCover.style.backgroundImage = `url('${libroActual.portada}')`;
+      accionablesText.innerHTML = libroActual.accionables.map(a => `• ${a}`).join('<br>');
+      leeCover.innerHTML = `
+        <span class="emoji">${libroActual.emoji}</span>
+        <span class="titulo">${libroActual.titulo}</span>
+      `;
       detente.classList.add('show');
       lee.classList.add('show');
       detenteLabel.style.display = 'none';
